--- a/app/src/main/res/navigation/settings_nav.xml
+++ b/app/src/main/res/navigation/settings_nav.xml
@@ -14,6 +14,44 @@
             app:exitAnim="@animator/nav_default_exit_anim"
             app:popEnterAnim="@animator/nav_default_pop_enter_anim"
             app:popExitAnim="@animator/nav_default_pop_exit_anim" />
+        <action
+            android:id="@+id/action_mainFragment_to_addonListFragment"
+            app:destination="@id/addonListFragment"
+            app:enterAnim="@animator/nav_default_enter_anim"
+            app:exitAnim="@animator/nav_default_exit_anim"
+            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
+            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
+        <action
+            android:id="@+id/action_mainFragment_to_imListFragment"
+            app:destination="@id/imListFragment"
+            app:enterAnim="@animator/nav_default_enter_anim"
+            app:exitAnim="@animator/nav_default_exit_anim"
+            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
+            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/imListFragment"
+        android:name="com.keyboard.myanglish.ui.main.settings.im.InputMethodListFragment"
+        android:label="@string/input_methods_conf">
+        <action
+            android:id="@+id/action_imListFragment_to_imConfigFragment"
+            app:destination="@id/imConfigFragment"
+            app:enterAnim="@animator/nav_default_enter_anim"
+            app:exitAnim="@animator/nav_default_exit_anim"
+            app:popEnterAnim="@animator/nav_default_pop_enter_anim"
+            app:popExitAnim="@animator/nav_default_pop_exit_anim" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/addonListFragment"
+        android:name="com.keyboard.myanglish.ui.main.settings.addon.AddonListFragment"
+        android:label="@string/addons_conf">
+    </fragment>
+
+    <fragment
+        android:id="@+id/imConfigFragment"
+        android:name="com.keyboard.myanglish.ui.main.settings.im.InputMethodConfigFragment">
     </fragment>
 
     <fragment
